--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -56,6 +56,8 @@
     padding-right: 1rem;
 }
 
+/* Media Screen Menu */
+
 .navbar-toggler{
     border: none;
     background: transparent !important;
