--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Molle:400i|Open+Sans+Condensed:300,700');
       
-      html,
-body {
+  html,body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -236,11 +235,13 @@ body  {
 .slider-list-item .more-element .content .excerpt {
   position: relative;
   display: block;
-  max-width: 240px;
+  max-width: 260px;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 28px;
   line-height: 30px;
   padding: 8px 0 16px;
+  text-align: justify;
+
 }
 .slider-list-item .more-element .content .link {
   position: relative;
@@ -331,10 +332,36 @@ body  {
 
   .slider-list-item .more-element .content .excerpt {
     display: none;
+
   }
 
   .slider-list-item .more-element .content .link {
     margin-top: 16px;
+  }
+
+}
+
+
+@media screen and (max-width: 680px) {
+
+.slider-list-item .more-element .content .excerpt {
+    font-size: 3vw;
+    max-width: 180px;
+    font-weight: 500;
+    text-align: justify;
+  }
+
+  .slider-list-item .more-element .content {
+    margin: 34px auto;
+    padding: 0 32px;
+    color: #2e3131;
+    text-align: left;
+  }
+
+  .slider-list-item .more-element .content .headline {
+    max-width: 200px;
+    font-size: 42px;
+    line-height: 46px;
   }
 
 }
@@ -344,7 +371,7 @@ body  {
   .slider-nav-bar {
     /* hide dots for mobile */
     opacity: 0;
-    z-index: -1;
+    z-index: -2;
   }
 
 }
