--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body  {
   font-family: 'Open Sans Condensed', sans-serif;
-  background: #8e9eab;  /* fallback for old browsers */
+  background: #8e9eab;  /* old browsers */
   background: -webkit-linear-gradient(to right, #dde3e6, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
   background: #B4BFC7; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   position: relative;
