--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Molle:400i|Open+Sans+Condensed:300,700");
-@import url("https://fonts.googleapis.com/css?family=Titillium+Web&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Acme&display=swap");
 
       
   html,body {
@@ -212,7 +212,7 @@ body  {
   display: block;
   width: 100%;
   height: 100%;
-  top: 40px; left: 0; right: 0; bottom: 0;
+  top: 40px; left: -25px; right: 0; bottom: 0;
   z-index: 10;
 }
 .slider-list-item .more-element .content {
@@ -237,14 +237,31 @@ body  {
 .slider-list-item .more-element .content .excerpt {
   position: relative;
   display: block;
-  max-width: 260px;
+  max-width: 240px;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 28px;
+  font-weight: bold;
   line-height: 30px;
   padding: 8px 0 16px;
-  text-align: justify;
 
 }
+
+.slider-list-item .more-element .content .berry{
+  color: #635db8;
+  text-shadow: 2px 2px #22203d;
+}
+
+.slider-list-item .more-element .content .kiwi{
+  color: rgb(133, 220, 65);
+  text-shadow: 2px 2px rgb(76, 107, 38);
+}
+
+.slider-list-item .more-element .content .mango{
+  color: rgb(230, 177, 64);
+  text-shadow: 2px 2px rgb(168, 119, 29);
+}
+
+
 .slider-list-item .more-element .content .link {
   position: relative;
   display: block;
@@ -347,11 +364,10 @@ body  {
 @media screen and (max-width: 960px) {
 
 .slider-list-item .more-element .content .excerpt {
+    max-width: 220px;
     margin-top: 20px;
     font-size: 2.5vw;
-    max-width: 180px;
-    font-weight: 500;
-    text-align: justify;
+    font-weight: bold;
   }
 
   .slider-list-item .more-element .content {
@@ -365,6 +381,18 @@ body  {
     max-width: 200px;
     font-size: 42px;
     line-height: 46px;
+  }
+
+  .slider-list-item .more-element .content .berry{
+    text-shadow: 1px 1px #22203d;
+  }
+  
+  .slider-list-item .more-element .content .kiwi{
+    text-shadow: 1px 1px rgb(76, 107, 38);
+  }
+  
+  .slider-list-item .more-element .content .mango{
+    text-shadow: 1px 1px rgb(168, 119, 29);
   }
 
 }
